{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 2563,
  "lineage": "ed57352c-9a8a-bc0d-8858-7ecb110a3c2b",
  "resources": [
    {
      "module": "module.backend_clickhouse[0].module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-vpc-us-east1-allow-clickhouse-healthchecks",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8123"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.854-07:00",
            "deny": [],
            "description": "Firewall rule for allowing Health Checks traffic to Clickhouse Nodes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-clickhouse-healthchecks",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-clickhouse-healthchecks",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-clickhouse-healthchecks",
            "source_ranges": [
              "10.19.0.0/20",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "clickhousenode"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "production-vpc-us-east1-allow-clickhouse-requests",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8123",
                  "9000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.863-07:00",
            "deny": [],
            "description": "Allow Clickhouse INBOUND requests traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-clickhouse-requests",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-clickhouse-requests",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-clickhouse-requests",
            "source_ranges": [
              "10.19.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "clickhousenode"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend_clickhouse[0].module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.backend_elastic_search[0].module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-vpc-us-east1-allow-elasticsearch-comms",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9300"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.678-07:00",
            "deny": [],
            "description": "Allow Elastic Search inter-nodes communications traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-comms",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-elasticsearch-comms",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-comms",
            "source_ranges": [
              "10.19.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "elasticsearchcomms"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "production-vpc-us-east1-allow-elasticsearch-healthchecks",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.837-07:00",
            "deny": [],
            "description": "Firewall rule for allowing Health Checks traffic to Elastic Search Nodes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-healthchecks",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-elasticsearch-healthchecks",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-healthchecks",
            "source_ranges": [
              "10.19.0.0/20",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "elasticsearchrequests"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "production-vpc-us-east1-allow-elasticsearch-requests",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.899-07:00",
            "deny": [],
            "description": "Allow Elastic Search INBOUND requests traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-requests",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-elasticsearch-requests",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-elasticsearch-requests",
            "source_ranges": [
              "10.19.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "elasticsearchrequests"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend_elastic_search[0].module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.cloud_router[0]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-20T08:06:29.496-07:00",
            "id": "projects/excelra-rnd-gsk-otg-2024/regions/us-east1/routers/production-router-0",
            "name": "production-router-0",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "project": "excelra-rnd-gsk-otg-2024",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/regions/us-east1/routers/production-router-0"
          },
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-router-0-nat",
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "excelra-rnd-gsk-otg-2024/us-east1/production-router-0/production-router-0-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "production-router-0-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "excelra-rnd-gsk-otg-2024",
            "region": "us-east1",
            "router": "production-router-0",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_router.google_compute_router.router",
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-fw-allow-http-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:26.158-07:00",
            "deny": [],
            "description": "Allow HTTP INBOUND traffic to nodes tagged accordingly",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-http-ingress",
            "log_config": [],
            "name": "production-fw-allow-http-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-http-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "production-fw-allow-https-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:26.212-07:00",
            "deny": [],
            "description": "Allow HTTPS INBOUND traffic to nodes tagged accordingly",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-https-ingress",
            "log_config": [],
            "name": "production-fw-allow-https-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-https-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "production-fw-allow-icmp-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:26.073-07:00",
            "deny": [],
            "description": "Allow ICMP INBOUND traffic to nodes tagged accordingly",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-icmp-ingress",
            "log_config": [],
            "name": "production-fw-allow-icmp-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-icmp-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "production-fw-allow-ssh-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:26.039-07:00",
            "deny": [],
            "description": "Allow SSH INBOUND traffic to nodes tagged accordingly",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-ssh-ingress",
            "log_config": [],
            "name": "production-fw-allow-ssh-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-fw-allow-ssh-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.vpc_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-east1/main-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-20T08:06:09.283-07:00",
            "gateway_address": "10.19.0.1",
            "id": "projects/excelra-rnd-gsk-otg-2024/regions/us-east1/subnetworks/main-subnet",
            "ip_cidr_range": "10.19.0.0/20",
            "name": "main-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "excelra-rnd-gsk-otg-2024",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/regions/us-east1/subnetworks/main-subnet"
          },
          "dependencies": [
            "module.vpc_network.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "mtu": 0,
            "name": "production-vpc",
            "project": "excelra-rnd-gsk-otg-2024",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_app.module.firewall_rules[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-vpc-us-east1-allow-webserver-healthchecks",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.978-07:00",
            "deny": [],
            "description": "Firewall rule to allow Web App Server nodes Health Checks traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-webserver-healthchecks",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-webserver-healthchecks",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-webserver-healthchecks",
            "source_ranges": [
              "10.19.0.0/20",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webappservernode"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "production-vpc-us-east1-allow-webserver-node",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-20T08:06:38.990-07:00",
            "deny": [],
            "description": "Allow HTTP INBOUND traffic to Web App Server nodes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-webserver-node",
            "log_config": [],
            "name": "production-vpc-us-east1-allow-webserver-node",
            "network": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/networks/production-vpc",
            "priority": 1000,
            "project": "excelra-rnd-gsk-otg-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/excelra-rnd-gsk-otg-2024/global/firewalls/production-vpc-us-east1-allow-webserver-node",
            "source_ranges": [
              "10.19.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webappservernode"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_network.module.routes.google_compute_route.route",
            "module.vpc_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_network.module.vpc.google_compute_network.network",
            "module.vpc_network.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_app.module.firewall_rules[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}